--- a/CinemaAPI/Cinema.UI/Cinema.UI.csproj
+++ b/CinemaAPI/Cinema.UI/Cinema.UI.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\Cinema.Service\Cinema.Service.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\uploads\" />
+    </ItemGroup>
+
 </Project>
