--- a/CinemaAPI/Cinema.UI/appsettings.json
+++ b/CinemaAPI/Cinema.UI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaDb": "Data Source=localhost; Initial Catalog=CinemaDb;User ID=sa;Password=1111;Persist Security Info=True;"
+    "CinemaDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CinemaDb;Trusted_Connection=True;"
   },
   "Jwt": {
     "Key": "ghajdaYadas59adsaf55aAd6ASD89xAdOp",
